--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -62,8 +62,8 @@
 		French:"[cityName] - Un [greatPerson] est né!",
 		Romanian:"[cityName] - S-a născut un [greatPerson]!",
 		Spanish:"¡[cityName] - Un [greatPerson] ha nacido!",
-		Simplified_Chinese:"[cityName] - 一个[greatPerson]已经出现！",
-		Traditional_Chinese:"[cityName] - 一個[greatPerson]已經出現!",
+		Simplified_Chinese:"一个[greatPerson]在[cityName]诞生了！",
+		Traditional_Chinese:"一個[greatPerson]在[cityName]誕生了!",
 		Portuguese:"[cityName] - Um [greatPerson] nasceu!",
 		German:"[cityName] - Ein [greatPerson] wurde geboren!",
 		Czech:"[cityName] - Narodil se [greatPerson]",
