--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1537,6 +1537,8 @@
 		Czech:"Atomová bomba"
 		German:"Atombombe"
 		French:"Bombardier Atomique"
+		Simplified_Chinese:"原子弹"
+		Traditional_Chinese:"原子彈"
 	}
 
 ////// Information era - not even putting here, too far off
